// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text Button should be generated correctly with 'Action' changed 1`] = `
Object {
  "kind": "text",
  "options": Object {
    "color": "negative",
    "label": "Sas",
    "payload": Object {
      "action": "SAS ACTION",
      "command": undefined,
    },
  },
}
`;

exports[`Text Button should be generated correctly with simple non-argument constructor 1`] = `
Object {
  "kind": "text",
  "options": Object {
    "color": "primary",
    "label": "Simple Button",
    "payload": Object {
      "action": undefined,
      "command": undefined,
    },
  },
}
`;

exports[`Text Button should be generated correctrly with non-parameters constructor 1`] = `
Object {
  "kind": "text",
  "options": Object {
    "color": "negative",
    "label": "Sas",
    "payload": Object {
      "action": undefined,
      "command": undefined,
    },
  },
}
`;

exports[`Text Button should be generated correctrly with parameters constructor 1`] = `
Object {
  "kind": "text",
  "options": Object {
    "color": "negative",
    "label": "Super sus",
    "payload": Object {
      "action": undefined,
      "command": undefined,
    },
  },
}
`;
